# yolov6_rknn

./: .gitignore  README.md  dataset.txt  person_test.py  test copy.py  test.py  yolov6nano copy.py  yolov6nano.py  yolov6nano_release.py
snapshot/: error_analysis.txt
snapshot_rk/: error_analysis.txt  map_name_to_file.txt
yolov6_rknn/: CMakeLists.txt
yolov6_rknn/include/: postprocess.h
yolov6_rknn/src/: main.cpp  postprocess.cc  postprocess.cpp
